--- a/W1/Assignment_1.ipynb
+++ b/W1/Assignment_1.ipynb
@@ -1678,7 +1678,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "tspgXdxZG4J0",
-        "outputId": "244b2e7b-fec0-482c-8c44-925600847184",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 269,
@@ -1732,7 +1731,8 @@
             "f447d65c76b2496aacafbd5378b608f7",
             "5499f2ff16b9460b9410d1ff860628fd"
           ]
-        }
+        },
+        "outputId": "244b2e7b-fec0-482c-8c44-925600847184"
       },
       "source": [
         "train_stream_fn = trax.data.TFDS('opus/medical',\r\n",
@@ -2269,11 +2269,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Zonhs__EXsNp",
-        "outputId": "2407d87c-4f99-402d-f0db-0966818ca1eb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Zonhs__EXsNp",
+        "outputId": "2407d87c-4f99-402d-f0db-0966818ca1eb"
       },
       "source": [
         "input_batch, target_batch, mask_batch = next(train_batch_stream)\r\n",
@@ -2316,11 +2316,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LWijdVEOajZL",
-        "outputId": "09ddacce-8913-4f00-ddf5-48035d29eef7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "LWijdVEOajZL",
+        "outputId": "09ddacce-8913-4f00-ddf5-48035d29eef7"
       },
       "source": [
         "# Pick a random index\r\n",
@@ -2486,11 +2486,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vKvwOCFigJwi",
-        "outputId": "a672f9e6-60fd-430d-939c-ff9fd4328559",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "vKvwOCFigJwi",
+        "outputId": "a672f9e6-60fd-430d-939c-ff9fd4328559"
       },
       "source": [
         "import w1_unittest\r\n",
@@ -2513,15 +2513,14 @@
         "id": "kWTw_bYMiH1I"
       },
       "source": [
-        "\r\n",
-        "2.2.2 Pre-attention decoder\r\n",
+        "## 2.2.2 Pre-attention decoder\r\n",
         "The pre-attention decoder runs on the targets and creates activations that are used as queries in attention. This is a Serial network which is composed of the following:\r\n",
         "\r\n",
-        "tl.ShiftRight: This pads a token to the beginning of your target tokens (e.g. [8, 34, 12] shifted right is [0, 8, 34, 12]). This will act like a start-of-sentence token that will be the first input to the decoder. During training, this shift also allows the target tokens to be passed as input to do teacher forcing.\r\n",
+        "* tl.ShiftRight: This pads a token to the beginning of your target tokens (e.g. [8, 34, 12] shifted right is [0, 8, 34, 12]). This will act like a start-of-sentence token that will be the first input to the decoder. During training, this shift also allows the target tokens to be passed as input to do teacher forcing.\r\n",
         "\r\n",
-        "tl.Embedding: Like in the previous function, this converts each token to its vector representation. In this case, it is the the size of the vocabulary by the dimension of the model: tl.Embedding(vocab_size, d_model). vocab_size is the number of entries in the given vocabulary. d_model is the number of elements in the word embedding.\r\n",
+        "* tl.Embedding: Like in the previous function, this converts each token to its vector representation. In this case, it is the the size of the vocabulary by the dimension of the model: tl.Embedding(vocab_size, d_model). vocab_size is the number of entries in the given vocabulary. d_model is the number of elements in the word embedding.\r\n",
         "\r\n",
-        "tl.LSTM: LSTM layer of size d_model."
+        "* tl.LSTM: LSTM layer of size d_model."
       ]
     },
     {
@@ -2534,12 +2533,90 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
-        "id": "6vtTXUHHiLVq"
+        "id": "pJ29wGQBjNdE"
       },
       "source": [
-        ""
+        "def pre_attention_decoder_fn(mode, target_vocab_size, d_model):\r\n",
+        "    \"\"\"\r\n",
+        "    Pre-attention decoder runs on the targets and creates\r\n",
+        "    activations that are used as queries in attention.\r\n",
+        "\r\n",
+        "    Inputs:\r\n",
+        "      mode: str. Train or eval\r\n",
+        "      target_vocab_size: length of vocab Int\r\n",
+        "      d_model: depth of embedding (n of LSTM unit)\r\n",
+        "\r\n",
+        "    Output:\r\n",
+        "      a serial model    \r\n",
+        "    \"\"\"\r\n",
+        "\r\n",
+        "    pre_attn_decoder = tl.Serial(\r\n",
+        "                                  tl.ShiftRight(mode = mode), # shift right to insert start-of-sentence token\r\n",
+        "                                                             # and implement teacher forcing during training\r\n",
+        "                                 \r\n",
+        "                                 tl.Embedding(vocab_size = target_vocab_size,\r\n",
+        "                                              d_feature = d_model), # embedding layer to convert tokens to vectors\r\n",
+        "                                 \r\n",
+        "                                 tl.LSTM(n_units = d_model)\r\n",
+        "    )\r\n",
+        "\r\n",
+        "    return pre_attn_decoder"
+      ],
+      "execution_count": 29,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EiIOqSl8klnE",
+        "outputId": "bb3f8554-0858-476a-dc3d-cde974fd4f35",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "w1_unittest.test_pre_attention_decoder_fn(pre_attention_decoder_fn) # They must have changed something in trax\r\n",
+        "# I have already seen the Serial[Serial[...]] instead of Serial[...]"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Wrong model. \n",
+            "Proposed:\n",
+            "Serial[\n",
+            "  Serial[\n",
+            "    ShiftRight(1)\n",
+            "  ]\n",
+            "  Embedding_10_2\n",
+            "  LSTM_2\n",
+            "] \n",
+            "Expected:\n",
+            "Serial[\n",
+            "  ShiftRight(1)\n",
+            "  Embedding_10_2\n",
+            "  LSTM_2\n",
+            "]\n",
+            "\u001b[92m 2  Tests passed\n",
+            "\u001b[91m 1  Tests failed\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LOUUaRm4lIen"
+      },
+      "source": [
+        "## 2.2.3 Preparing the attention input\r\n",
+        "This function will prepare the inputs to the attention layer. We want to take in the encoder and pre-attention decoder activations and assign it to the queries, keys, and values. In addition, another output here will be the mask to distinguish real tokens from padding tokens. This mask will be used internally by Trax when computing the softmax so padding tokens will not have an effect on the computated probabilities. From the data preparation steps in Section 1 of this assignment, you should know which tokens in the input correspond to padding.\r\n",
+        "\r\n",
+        "We have filled the last two lines in composing the mask for you because it includes a concept that will be discussed further next week. This is related to multiheaded attention which you can think of right now as computing the attention multiple times to improve the model's predictions. It is required to consider this additional axis in the output so we've included it already but you don't need to analyze it just yet. What's important now is for you to know which should be the queries, keys, and values, as well as to initialize the mask."
       ]
     }
   ]
