--- a/W1/Assignment_1.ipynb
+++ b/W1/Assignment_1.ipynb
@@ -2661,11 +2661,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "CKM_1xFCbHcQ",
-        "outputId": "df01d37c-9ed7-4372-d0b4-f8138cba4095",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "CKM_1xFCbHcQ",
+        "outputId": "df01d37c-9ed7-4372-d0b4-f8138cba4095"
       },
       "source": [
         "w1_unittest.test_prepare_attention_input(prepare_attention_input)"
@@ -2739,7 +2739,40 @@
         "id": "XzysDgM2cXn3"
       },
       "source": [
-        ""
+        "def MNTAttention(input_vocab_size = 33000,\r\n",
+        "                 target_vocab_size = 33000,\r\n",
+        "                 d_model = 1024,\r\n",
+        "                 n_encoder_layers = 2,\r\n",
+        "                 n_decoder_layers = 2,\r\n",
+        "                 n_attention_heads = 4,\r\n",
+        "                 attention_dropout = 0.0,\r\n",
+        "                 mode = \"train\"):\r\n",
+        "  \r\n",
+        "    \"\"\"Returns an LSTM sequence-to-sequence model with attention.\r\n",
+        "\r\n",
+        "    The input to the model is a pair (input tokens, target tokens), e.g.,\r\n",
+        "    an English sentence (tokenized) and its translation into German (tokenized).\r\n",
+        "\r\n",
+        "    Args:\r\n",
+        "    input_vocab_size: int: vocab size of the input\r\n",
+        "    target_vocab_size: int: vocab size of the target\r\n",
+        "    d_model: int:  depth of embedding (n_units in the LSTM cell)\r\n",
+        "    n_encoder_layers: int: number of LSTM layers in the encoder\r\n",
+        "    n_decoder_layers: int: number of LSTM layers in the decoder after attention\r\n",
+        "    n_attention_heads: int: number of attention heads\r\n",
+        "    attention_dropout: float, dropout for the attention layer\r\n",
+        "    mode: str: 'train', 'eval' or 'predict', predict mode is for fast inference\r\n",
+        "\r\n",
+        "    Returns:\r\n",
+        "    A LSTM sequence-to-sequence model with attention.\r\n",
+        "    \"\"\"\r\n",
+        "  \r\n",
+        "\r\n",
+        "\r\n",
+        "  # run the AttentionQKV layer --> This is similar to the bottleneck in an autoencoder\r\n",
+        "  # Express the sentence as a reduced vector. If you add an extra dimension (filter depth in CNN)\r\n",
+        "  # you get to express more information. From a 2D vector to a 3D vector, concatenate 288 outputs of attention heads.\r\n",
+        "  # Same thing"
       ],
       "execution_count": null,
       "outputs": []
